--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/vite": "^4.0.7",
+    "axios": "^1.8.3",
     "pinia": "^3.0.1",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
