--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.8.3",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.7",
     "vue": "^3.5.13",
@@ -56,5 +57,13 @@
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5",
     "vue-tsc": "^2.2.2"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "cypress"
+    ],
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
