--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/vite": "^4.0.7",
+    "@vueuse/core": "^13.0.0",
     "axios": "^1.8.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.487.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "reka-ui": "^2.2.0",
     "sweetalert2": "^11.17.2",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.7",
+    "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -63,7 +70,9 @@
       "cypress"
     ],
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "vue-demi"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
 }
